--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "[land-registry-elements](https://github.com/LandRegistry/land-registry-elements) provides a set of reusable components based on and extending the gov uk elements. This repository contains the bare minimum required to build these assets using [land-registry-gulp-tasks](https://github.com/LandRegistry/land-registry-gulp-tasks)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp test",
+    "build": "gulp clean && gulp copy && gulp build",
+    "dev": "npm run build && gulp watch"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/LandRegistry/land-registry-elements-examples/issues"
   },
-  "homepage": "https://github.com/LandRegistry/land-registry-elements-examples#readme"
+  "homepage": "https://github.com/LandRegistry/land-registry-elements-examples#readme",
+  "dependencies": {
+    "gulp": "^3.9.1",
+    "land-registry-gulp-tasks": "github:LandRegistry/land-registry-gulp-tasks"
+  }
 }
