--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   },
   "homepage": "https://github.com/LandRegistry/land-registry-elements-examples#readme",
   "dependencies": {
+    "govuk-elements-sass": "^3.1.0",
+    "govuk_frontend_toolkit": "^6.0.3",
+    "govuk_template_jinja": "^0.22.2",
     "gulp": "^3.9.1",
+    "land-registry-elements": "github:LandRegistry/land-registry-elements",
     "land-registry-gulp-tasks": "github:LandRegistry/land-registry-gulp-tasks"
   }
 }
